--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -262,6 +262,10 @@ svg.arrow-active {
     }
 }
 
+.logo-mobile {
+    display: none;
+}
+
 svg.icon-footer:hover path {
     fill: $softRed;
     cursor: pointer;
@@ -306,11 +310,17 @@ footer {
     }
 }
 
-@media (max-width: 812px) {
+@media (max-width: 991px) {
     .container {
         max-width: 100vw;
         text-align: center;
         padding: 0 40px;
+    }
+
+    .logo-mobile {
+        display: inherit;
+        position: relative;
+        transform: translate(27%, -233%);
     }
 
     #navbarContent {
@@ -388,18 +398,10 @@ footer {
         height: 100vh;
         left: 0;
         top: 0;
-        transition: all 0.5s ease;
 
         & ul {
             position: relative;
             top: 50px;
-        }
-
-        & ul.navbar-nav::before {
-            content: url('../img/logo-bookmark-mobile.svg');
-            position: relative;
-            top: -58px;
-            left: -74px;
         }
 
         & li {
